Updated The CSS for PostList + Added Padding for input form

--- a/src/Components/PostLIst/PostList.css
+++ b/src/Components/PostLIst/PostList.css
@@ -1,4 +1,10 @@
-.border-box{
+.fluid-containers{
+    margin-left: 5em;
+    margin-right: 5em;
+    background: azure;
+}
+
+.border-boxy{
     background: white;
     border-radius: 2em;
     border: 10px black;
@@ -6,15 +12,8 @@
     margin-right: 20em;
     padding-top: 2em;
     padding-bottom:2em;
+    padding-left: 2em;
+    padding-right: 2em;
 
 }
 
-.container-fluid{
-    margin-left: 5em;
-    margin-right: 5em;
-    background: azure;
-}
-
-.post-content{
-    padding-left: 5em;
-}
